A bit of frontend fixes, to make the style look a bit better by removing the contrast

--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -36,5 +36,5 @@ body {
 }
 
 .navbar {
-  background: #363B42;
+  background: #161b22;
 }
